--- a/wrcfilmes/src/main/resources/application.properties
+++ b/wrcfilmes/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8000
 
 #H2
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.h2.console.path=/h2-console
 
 #Datasource H2
 spring.datasource.url=jdbc:h2:file:/C:/Dev/bd/banco.db
